--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "es6-promise": "^4.2.8",
+    "fetch-retry": "^4.1.1",
     "fs-extra": "^10.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "node-osu": "^2.2.1",
     "prompt-sync": "^4.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/respektive/osu-score-fetcher-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/respektive/osu-score-fetcher-cli/issues"
+  },
+  "homepage": "https://github.com/respektive/osu-score-fetcher-cli#readme"
 }
