--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fetch best score of a user for every ranked beatmap",
   "main": "index.js",
   "scripts": {
-    "start": "git pull; npm i; node index",
+    "update": "git pull && npm i",
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "respektive",
