--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "fetch best score of a user for every ranked beatmap",
   "main": "index.js",
   "scripts": {
+    "start": "git pull && npm i && node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "respektive",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
-    "es6-promise": "^4.2.8",
-    "fetch-retry": "^4.1.1",
     "fs-extra": "^10.0.0",
-    "isomorphic-fetch": "^3.0.0",
-    "node-osu": "^2.2.1",
+    "node-fetch": "^2.6.1",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {},
